--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="background-overlay"></div>
 
     <header>
-        <h1 class="logo">Gatão <img src="https://em-content.zobj.net/source/apple/96/cat-face-with-wry-smile_1f63c.png" alt="Gato com sorriso maroto" class="header-cat-emoji"></h1>
+        <h1 class="logo">Gatinho <img src="https://em-content.zobj.net/source/apple/96/cat-face-with-wry-smile_1f63c.png" alt="Gato com sorriso maroto" class="header-cat-emoji"></h1>
         <div id="wallet" class="wallet">
             <span>Carteira:</span>
             <span id="wallet-amount">R$ 100.00</span>
